--- a/sources/_AppleDOSMappings.plist
+++ b/sources/_AppleDOSMappings.plist
@@ -46,6 +46,20 @@
 	</dict>
 	<dict>
 		<key>DOSFileType</key>
+		<integer>66</integer>
+		<key>Filename</key>
+		<string>SMTRECON.S</string>
+		<key>MacFormat</key>
+		<integer>2</integer>
+		<key>StartingAddress</key>
+		<integer>2305</integer>
+		<key>Valid</key>
+		<true/>
+		<key>Verified</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>DOSFileType</key>
 		<integer>84</integer>
 		<key>Filename</key>
 		<string>T.FPMACROS</string>
@@ -319,6 +333,20 @@
 		<integer>1</integer>
 		<key>StartingAddress</key>
 		<integer>8192</integer>
+		<key>Valid</key>
+		<true/>
+		<key>Verified</key>
+		<true/>
+	</dict>
+	<dict>
+		<key>DOSFileType</key>
+		<integer>66</integer>
+		<key>Filename</key>
+		<string>TCPRECON.S</string>
+		<key>MacFormat</key>
+		<integer>2</integer>
+		<key>StartingAddress</key>
+		<integer>2305</integer>
 		<key>Valid</key>
 		<true/>
 		<key>Verified</key>
